tests/fuzz/testdata/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-route
spec:
  hosts:
    - reviews.prod.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: "/wpcatalog"
        - uri:
            prefix: "/consumercatalog"
      rewrite:
        uri: "/newcatalog"
      route:
        - destination:
            host: reviews.prod.svc.cluster.local
            subset: v2
    - route:
        - destination:
            host: reviews.prod.svc.cluster.local
            subset: v1
